--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,23 @@
 
     </div>
 </section>
-<footer>
-    © 2026 Γκουγκουλή Βασιλική
+<footer class="site-footer">
+    <div class="footer-content">
+        <h4>Γκουγκουλή Βασιλική</h4>
+        <p class="role-title">Δικηγόρος - Διαπιστευμένη Διαμεσολαβήτρια</p>
+        
+        <div class="footer-links">
+            <span>📞 <a href="tel:2101234567">210 1234567</a></span>
+            <span class="separator">|</span>
+            <span>📱 <a href="tel:69XXXXXXXX">69XX XXXXXX</a></span>
+            <span class="separator">|</span>
+            <span>✉️ <a href="mailto:vasia.gougouli@gmail.com">vasia.gougouli@gmail.com</a></span>
+        </div>
+        
+        <div class="copyright">
+            © 2026 Γκουγκουλή Βασιλική. All Rights Reserved.
+        </div>
+    </div>
 </footer>
 
 </body>
