--- a/contact.html
+++ b/contact.html
@@ -74,9 +74,7 @@
         <p class="role-title">Δικηγόρος - Διαπιστευμένη Διαμεσολαβήτρια</p>
         
         <div class="footer-links">
-            <span>📞 <a href="tel:2101234567">210 1234567</a></span>
-            <span class="separator">|</span>
-            <span>📱 <a href="tel:69XXXXXXXX">69XX XXXXXX</a></span>
+            <span>📞 <a href="tel:6989705813">6989705813</a></span>
             <span class="separator">|</span>
             <span>✉️ <a href="mailto:vasia.gougouli@gmail.com">vasia.gougouli@gmail.com</a></span>
         </div>
