--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 <footer class="site-footer">
     <div class="footer-content">
         <h4>Γκουγκουλή Βασιλική</h4>
-        <p class="role-title">Δικηγόρος - Διαπιστευμένη Διαμεσολαβήτρια</p>
+        <p class="role-title">Δικηγόρος - Διαμεσολαβήτρια</p>
         
         <div class="footer-links">
             <span>📞 <a href="tel:6989705813">6989705813</a></span>
@@ -79,7 +79,7 @@
             <span>✉️ <a href="mailto:vasia.gougouli@gmail.com">vasia.gougouli@gmail.com</a></span>
         </div>
         
-        <div class="copyright">
+        <br> <br> <div class="copyright">
             © 2026 Γκουγκουλή Βασιλική. All Rights Reserved.
         </div>
     </div>
