--- a/index.html
+++ b/index.html
@@ -50,8 +50,21 @@
     </div>
 </div>
 
-<footer>
-    © 2026 Γκουγκουλή Βασιλική | Designed by You
+<footer class="site-footer">
+    <div class="footer-content">
+        <h4>Γκουγκουλή Βασιλική</h4>
+        <p class="role-title">Δικηγόρος - Διαμεσολαβήτρια</p>
+        
+        <div class="footer-links">
+            <span>📞 <a href="tel:6989705813">6989705813</a></span>
+            <span class="separator">|</span>
+            <span>✉️ <a href="mailto:vasia.gougouli@gmail.com">vasia.gougouli@gmail.com</a></span>
+        </div>
+        
+        <br> <br> <div class="copyright">
+            © 2026 Γκουγκουλή Βασιλική. All Rights Reserved.
+        </div>
+    </div>
 </footer>
 
 <script>
