--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li><i class="fas fa-check"></i> Διατήρηση Σχέσεων</li>
                 </ul>
                 
-                <a href="mediation.html" class="btn-gold-solid">Περισσότερα για τη Διαμεσολάβηση</a>
+                <a href="mediation.html" class="btn-white-contrast">Περισσότερα για τη Διαμεσολάβηση</a>
             </div>
         </div>
 
