--- a/index.html
+++ b/index.html
@@ -69,16 +69,19 @@
 
 <div class="blue-panel" id="counters-section">
     <div class="counter-wrapper">
+        
         <div class="counter-item">
-            <i class="fas fa-gavel counter-icon"></i>
+            <i class="fas fa-file-signature counter-icon"></i> 
             <div class="count" data-target="52" data-duration="2000" style="font-size: 48px; font-weight: bold;">0</div>
             <div>Διεκπεραιωμένες Υποθέσεις</div>
         </div>
+
         <div class="counter-item">
             <i class="fas fa-scale-balanced counter-icon"></i>
             <div class="count" data-target="5" data-duration="2500" style="font-size: 48px; font-weight: bold;">0</div>
             <div>Χρόνια Εμπειρίας</div>
         </div>
+
     </div>
 </div>
 
