--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 <div class="blue-panel" id="counters-section">
     <div class="counter-wrapper">
         
-        <div class="counter-item">
-            <i class="fas fa-file-signature counter-icon"></i> 
-            <div class="count" data-target="52" data-duration="2000" style="font-size: 48px; font-weight: bold;">0</div>
-            <div>Διεκπεραιωμένες Υποθέσεις</div>
+        <div class="counter-box">
+            <i class="fas fa-file-signature counter-icon-simple"></i>
+            <div class="count" data-target="52" data-duration="2000">0</div>
+            <div class="counter-label">Διεκπεραιωμένες Υποθέσεις</div>
         </div>
 
-        <div class="counter-item">
-            <i class="fas fa-scale-balanced counter-icon"></i>
-            <div class="count" data-target="5" data-duration="2500" style="font-size: 48px; font-weight: bold;">0</div>
-            <div>Χρόνια Εμπειρίας</div>
+        <div class="counter-box">
+            <i class="fas fa-scale-balanced counter-icon-simple"></i>
+            <div class="count" data-target="5" data-duration="2500">0</div>
+            <div class="counter-label">Χρόνια Εμπειρίας</div>
         </div>
 
     </div>
