--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <a href="index.html" class="logo-link">
         <img src="img/logo.png" alt="Λογότυπο VG" class="logo-img">
     </a>
-    <ul>
+
+    <div class="hamburger" onclick="toggleMenu()">
+        <i class="fas fa-bars"></i>
+    </div>
+
+    <ul id="nav-links">
         <li><a href="index.html" class="active">Αρχική</a></li>
         <li><a href="about.html">Βιογραφικό</a></li>
         <li><a href="mediation.html">Διαμεσολάβηση</a></li>
