--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
         }
     });
 </script>
+    <script>
+    // Script για το Hamburger Menu
+    function toggleMenu() {
+        const navLinks = document.getElementById('nav-links');
+        // Προσθέτει ή αφαιρεί την κλάση 'show' που εμφανίζει το μενού στο CSS
+        navLinks.classList.toggle('show');
+    }
+
+    // ...εδώ ακολουθεί το script για τα counters που είχαμε βάλει πριν...
+</script>
 
 </body>
 </html>
