--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="hero" style="background-image: url('img/hero.jpg');">
     <div class="hero-content">
         <h1>Γκουγκουλή Βασιλική</h1>
-        <p>Δικηγόρος – Πιστοποιημένη Διαμεσολαβήτρια</p>
+        <p>Δικηγόρος – Διαμεσολαβήτρια</p>
         <a href="contact.html" class="btn-cta">Κλείστε Ραντεβού</a>
     </div>
 </div>
