--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </a>
 
     <div class="hamburger" onclick="toggleMenu()">
-        <i class="fas fa-bars"></i>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
     </div>
 
     <ul id="nav-links">
