--- a/about.html
+++ b/about.html
@@ -12,9 +12,16 @@
     <a href="index.html" class="logo-link">
         <img src="img/logo.png" alt="Λογότυπο VG" class="logo-img">
     </a>
-    <ul>
-        <li><a href="index.html">Αρχική</a></li>
-        <li><a href="about.html" class="active">Βιογραφικό</a></li>
+
+    <div class="hamburger" onclick="toggleMenu()">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
+
+    <ul id="nav-links">
+        <li><a href="index.html" class="active">Αρχική</a></li>
+        <li><a href="about.html">Βιογραφικό</a></li>
         <li><a href="mediation.html">Διαμεσολάβηση</a></li>
         <li><a href="contact.html">Επικοινωνία</a></li>
     </ul>
