--- a/about.html
+++ b/about.html
@@ -81,6 +81,14 @@
         </div>
     </div>
 </footer>
-
+<script>
+    function toggleMenu() {
+        const navLinks = document.getElementById('nav-links');
+        navLinks.classList.toggle('show');
+    }
+    
+    // Αν έχεις και counters σε αυτή τη σελίδα, άσε και τον κώδικα των counters.
+    // Αν όχι, βάλε μόνο αυτό το κομμάτι για το μενού.
+</script>
 </body>
 </html>
