--- a/mediation.html
+++ b/mediation.html
@@ -14,9 +14,7 @@
     </a>
 
     <div class="hamburger" onclick="toggleMenu()">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <i class="fas fa-bars"></i>
     </div>
 
     <ul id="nav-links">
