--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,9 @@
         <img src="img/logo.png" alt="Λογότυπο VG" class="logo-img">
     </a>
 
-    <div class="hamburger" onclick="toggleMenu()">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </div>
+<div class="hamburger" onclick="toggleMenu()">
+    <i class="fas fa-bars"></i>
+</div>
 
     <ul id="nav-links">
         <li><a href="index.html" class="active">Αρχική</a></li>
