--- a/about.html
+++ b/about.html
@@ -18,12 +18,10 @@
     <i class="fas fa-bars"></i>
 </div>
 
-    <ul id="nav-links">
-        <li><a href="index.html" class="active">Αρχική</a></li>
-        <li><a href="about.html">Βιογραφικό</a></li>
-        <li><a href="mediation.html">Διαμεσολάβηση</a></li>
-        <li><a href="contact.html">Επικοινωνία</a></li>
-    </ul>
+ <ul id="nav-links">
+    <li><a href="index.html">Αρχική</a></li>  <li><a href="about.html" class="active">Βιογραφικό</a></li> <li><a href="mediation.html">Διαμεσολάβηση</a></li>
+    <li><a href="contact.html">Επικοινωνία</a></li>
+</ul>
 </nav>
 
 <section class="container about-section">
