--- a/mediation.html
+++ b/mediation.html
@@ -18,12 +18,11 @@
         <i class="fas fa-bars"></i>
     </div>
 
-    <ul id="nav-links">
-        <li><a href="index.html" class="active">Αρχική</a></li>
-        <li><a href="about.html">Βιογραφικό</a></li>
-        <li><a href="mediation.html">Διαμεσολάβηση</a></li>
-        <li><a href="contact.html">Επικοινωνία</a></li>
-    </ul>
+   <ul id="nav-links">
+    <li><a href="index.html">Αρχική</a></li>
+    <li><a href="about.html">Βιογραφικό</a></li>
+    <li><a href="mediation.html" class="active">Διαμεσολάβηση</a></li> <li><a href="contact.html">Επικοινωνία</a></li>
+</ul>
 </nav>
 
 <div class="hero" style="background-image: url('img/panel.jpg'); height: 40vh;">
