--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,10 @@
 </div>
 
     <ul id="nav-links">
-        <li><a href="index.html" class="active">Αρχική</a></li>
-        <li><a href="about.html">Βιογραφικό</a></li>
-        <li><a href="mediation.html">Διαμεσολάβηση</a></li>
-        <li><a href="contact.html">Επικοινωνία</a></li>
-    </ul>
+    <li><a href="index.html">Αρχική</a></li>
+    <li><a href="about.html">Βιογραφικό</a></li>
+    <li><a href="mediation.html">Διαμεσολάβηση</a></li>
+    <li><a href="contact.html" class="active">Επικοινωνία</a></li> </ul>
 </nav>
 
 <section class="container contact-section">
